--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -25,7 +25,7 @@
     }
 
     &:disabled {
-      background-color: #bdbdbd;
+      background-color: var(--btn-disabled-bg);
       color: #ffffff;
       cursor: not-allowed;
       pointer-events: none;
