--- a/src/shared/ui/AvatarUpload/AvatarUpload.scss
+++ b/src/shared/ui/AvatarUpload/AvatarUpload.scss
@@ -63,7 +63,7 @@
 
 /* Контент модального окна */
 .modal-overlay-profile__content {
-  background: #fff;
+  background: var(--posts__modal-bg);
   width: 280px;
   min-height: 162px;
   padding: 0;
@@ -77,12 +77,12 @@
 .modal-overlay-profile__title {
   font-size: 16px;
   font-weight: 600;
-  color: #ff5722;
+  color: var(--posts__modal-header);
   display: flex;
   align-items: center;
   padding-left: 15px;
   min-height: 50px;
-  border-bottom: 1.5px solid #F2F2F2
+  border-bottom: var(--posts__modal-header-border);
 }
 
 .modal-overlay-profile__close-btn {
@@ -94,7 +94,7 @@
   cursor: pointer;
   background: none !important;
   border: none;
-  color: #333;
+  color: var(--close-svg-color);
 }
 
 .modal-overlay-profile__close-btn:hover {
@@ -106,11 +106,11 @@
   padding: 12px;
   min-height: 56px;
   font-size: 14px;
-  background: #fff;
+  background:  var(--posts__modal-bg);
   border: none;
   cursor: pointer;
   text-align: left;
-  color: #333;
+  color: var(--posts__modal-color);
   display: flex;
   align-items: center;
 }
@@ -118,7 +118,8 @@
   border-radius: 0 0 12px 12px;
 }
 .modal-overlay-profile__content button:hover {
-  background: #FFD1C3;
+  background: var(--profile__content-btn-hover-bg);
+  color: var(--profile__content-btn-hover-color);
 }
 
 @keyframes fadeIn {
